<resources>

    <string name="app_name">百度校园助手</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">百度校园助手</string>
    <string name="top_title1">百度校园</string>
    <string name="top_title2">课程信息</string>
    <string name="top_button_personal">个人中心</string>
    <string name="top_button_ret">返回</string>
    <string name="choose_city">选择您的城市</string>
    <string name="choose_school">选择您的学校</string>
    <string name="choose_institute">选择您的学院</string>
    <string name="choose_major">选择您的专业</string>
    <string name="choose_grade">选择您的年级</string>
    <string name="choose_class">选择您的班级</string>
    <string name="query_schedule">查询课表</string>

</resources>