<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <include layout="@layout/title" />

    <EditText
        android:id="@+id/et_choose_city"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/choose_city"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_choose_school"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/choose_school"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_choose_institute"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/choose_institute"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_choose_major"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/choose_major"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_choose_grade"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/choose_grade"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_choose_class"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/choose_class"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btn_query_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/query_schedule" />
    </LinearLayout>

</LinearLayout>